src/objects/MYBZ_PriorityAccount__c.object
<CustomObject>
    <fields>
        <fullName>Global_Id__c</fullName>
        <label>Global Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LE_ID_IHS__c</fullName>
        <label>LE_ID_IHS</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>System</label>
        <referenceTo>MYBZ_System__c</referenceTo>
        <relationshipName>MYBZ_PriorityAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Priority Accounts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Priority Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Priority Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>